tests/fixtures/invalid/max_set_int.py
# Cannot call max() with Set[int], Int
x = max({1, 2, 3}, 1)
